# munge-rs

./: Cargo.toml  README.md  build.rs
src/: credential.rs  ctx.rs  enums.rs  error.rs  lib.rs  munge.rs  mungeOption.rs
tests/: integration_test.rs
