[package]
name = "munge-rs"
version = "0.1.5"
edition = "2021"
description = "Rust FFI binding for MUNGE Uid 'N' Gid Emporium"
homepage = "https://github.com/It4innovations/munge-rs"
repository = "https://github.com/It4innovations/munge-rs"
license = "MIT"

build = "build.rs"


[dependencies]
libc = "0.2"
thiserror = "1.0"
num_enum = "0.7"
chrono = "0.4"

[build-dependencies]
bindgen = "0.69.4"
